@@ -1,7 +1,7 @@
 import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -10,6 +10,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 public class FlowerFieldBoardTest {
 
     @Test
+    @DisplayName("no rows")
     public void testInputBoardWithNoRowsAndNoColumns() {
         List<String> inputBoard = Collections.emptyList();
         List<String> expectedNumberedBoard = Collections.emptyList();
@@ -20,9 +21,10 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("no columns")
     public void testInputBoardWithOneRowAndNoColumns() {
-        List<String> inputBoard = Collections.singletonList("");
-        List<String> expectedNumberedBoard = Collections.singletonList("");
+        List<String> inputBoard = List.of("");
+        List<String> expectedNumberedBoard = List.of("");
         List<String> actualNumberedBoard = new FlowerFieldBoard(inputBoard).withNumbers();
 
         assertThat(actualNumberedBoard).isEqualTo(expectedNumberedBoard);
@@ -30,14 +32,15 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("no flowers")
     public void testInputBoardWithNoFlowers() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "   ",
                 "   ",
                 "   "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "   ",
                 "   ",
                 "   "
@@ -50,14 +53,15 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("garden full of flowers")
     public void testInputBoardWithOnlyFlowers() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "***",
                 "***",
                 "***"
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "***",
                 "***",
                 "***"
@@ -70,14 +74,15 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("flower surrounded by spaces")
     public void testInputBoardWithSingleFlowerAtCenter() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "   ",
                 " * ",
                 "   "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "111",
                 "1*1",
                 "111"
@@ -90,14 +95,15 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("space surrounded by flowers")
     public void testInputBoardWithFlowersAroundPerimeter() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "***",
                 "* *",
                 "***"
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "***",
                 "*8*",
                 "***"
@@ -110,12 +116,13 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("horizontal line")
     public void testInputBoardWithSingleRowAndTwoFlowers() {
-        List<String> inputBoard = Collections.singletonList(
+        List<String> inputBoard = List.of(
                 " * * "
         );
 
-        List<String> expectedNumberedBoard = Collections.singletonList(
+        List<String> expectedNumberedBoard = List.of(
                 "1*2*1"
         );
 
@@ -126,12 +133,13 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("horizontal line, flowers at edges")
     public void testInputBoardWithSingleRowAndTwoFlowersAtEdges() {
-        List<String> inputBoard = Collections.singletonList(
+        List<String> inputBoard = List.of(
                 "*   *"
         );
 
-        List<String> expectedNumberedBoard = Collections.singletonList(
+        List<String> expectedNumberedBoard = List.of(
                 "*1 1*"
         );
 
@@ -142,8 +150,9 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("vertical line")
     public void testInputBoardWithSingleColumnAndTwoFlowers() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 " ",
                 "*",
                 " ",
@@ -151,7 +160,7 @@ public class FlowerFieldBoardTest {
                 " "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "1",
                 "*",
                 "2",
@@ -166,8 +175,9 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("vertical line, flowers at edges")
     public void testInputBoardWithSingleColumnAndTwoFlowersAtEdges() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "*",
                 " ",
                 " ",
@@ -175,7 +185,7 @@ public class FlowerFieldBoardTest {
                 "*"
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "*",
                 "1",
                 " ",
@@ -190,8 +200,9 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("cross")
     public void testInputBoardWithFlowersInCross() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 "  *  ",
                 "  *  ",
                 "*****",
@@ -199,7 +210,7 @@ public class FlowerFieldBoardTest {
                 "  *  "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 " 2*2 ",
                 "25*52",
                 "*****",
@@ -214,8 +225,9 @@ public class FlowerFieldBoardTest {
 
     @Disabled("Remove to run test")
     @Test
+    @DisplayName("large garden")
     public void testLargeInputBoard() {
-        List<String> inputBoard = Arrays.asList(
+        List<String> inputBoard = List.of(
                 " *  * ",
                 "  *   ",
                 "    * ",
@@ -224,7 +236,7 @@ public class FlowerFieldBoardTest {
                 "      "
         );
 
-        List<String> expectedNumberedBoard = Arrays.asList(
+        List<String> expectedNumberedBoard = List.of(
                 "1*22*1",
                 "12*322",
                 " 123*2",
@@ -238,4 +250,20 @@ public class FlowerFieldBoardTest {
         assertThat(actualNumberedBoard).isEqualTo(expectedNumberedBoard);
     }
 
+    @Disabled("Remove to run test")
+    @Test
+    @DisplayName("multiple adjacent flowers")
+    public void testMultipleAdjacentFlowers() {
+        List<String> inputBoard = List.of(
+                " ** "
+        );
+
+        List<String> expectedNumberedBoard = List.of(
+                "1**1"
+        );
+
+        List<String> actualNumberedBoard = new FlowerFieldBoard(inputBoard).withNumbers();
+
+        assertThat(actualNumberedBoard).isEqualTo(expectedNumberedBoard);
+    }
 }
